src/style.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
}

/* main */

.main {
  background: url(./images/background.jpeg) no-repeat; 
  background-size: cover;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  font-family: 'Baloo 2', cursive;
}

.main > h1 {
  font-family: FinkHeavy;
  font-size: 48px;
  color: #FCC533;
  text-shadow: 
    4px 4px 2px rgba(100, 66, 2, 1),
    7px 6px 2px rgb(150, 110, 40);
}

.phone {
  background-color: #F7F4E7;
  width: 80%;
  height: 85%;
  margin: 0 0 28px 0;
  border-radius: 70px;
  box-shadow: 0px 2.9825618267059326px 7.456404209136963px 0px
    rgba(0, 0, 0, 0.1);
  position: relative;
}

/* Header */

.header  {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.header > h1 {
  color: #756B5D;
  font-size: 28px;
  margin: 5px 0 0 0;
}

nav {
  margin-top: 20px;
  color: rgb(223, 217, 203);
  display: flex;
  justify-content: space-between;
  width: 70%;
}

.header--nav-service {
  height: 20px;
}

.header--nav-time {
  margin: 0;
}

.header--nav-location {
  height: 20px;
  margin-left: 15px;
}

/* Card */

.card {
  margin: 10px 15px 0 15px;
  color: #756B5D;
}

/* Card: form */

.form {
  display: flex;
  justify-content: center;
}

.form > input {
  padding: 6px 10px;
  border-radius: 15px;
  font-size: 16px;
  border: 1px solid #756B5D;
  box-shadow: 0px 2.9825618267059326px 7.456404209136963px 0px
  rgba(0, 0, 0, 0.1);
}

::placeholder {
  color: rgb(223, 217, 203);
}

.form > button {
  border: none;
  text-decoration: none;
  background: none;
  transition: all 0.3s ease-in-out;
  font-size: 28px;
  margin-left: 8px;
  color: rgb(223, 217, 203);
}

.form > button:active {
  color: #756B5D;
  transform: scale(1.2);
  text-shadow: 0px 2.9825618267059326px 7.456404209136963px 0px
  rgba(0, 0, 0, 0.1);
}

/* Card: villager info */

.villager--results {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  position: relative;
}

/* .polaroid-pictures {
  width: 800px;
} */

.polaroid-picture {
  margin-top: 35px;
  border: solid  white;
  border-width: 10px 10px 60px 10px;
  border-radius: 5px;
  width: 200px;
  height: 340px;
  display: flex;
  justify-content: center;
  position: relative;
  box-shadow: 0px 2px 5px 3px
  rgba(0, 0, 0, 0.1);
  background: url('./images/beach-background.png') no-repeat center center/cover;
}

.villager--image {
  max-height: 105%;
  max-width: 115%;
  position: absolute;
  bottom: 3%;
  filter: drop-shadow(5px 5px 5px
  rgba(0, 0, 0, 0.2));
}

.house-exterior-img {
  width: 95%;
}

.house-interior-img {
  object-fit: cover;
  overflow: hidden;
}

.wooden-sign {
  position: absolute;
  bottom: -18%;
  width: 80%;
}

.villager--name {
  position: absolute;
  bottom: -26%;
}

.villager--name-exterior, .villager--name-interior {
  position: absolute;
  bottom: -24%;
  font-size: 18px;
}

.house-icon {
  height: 24px;
  position: absolute;
  top: 40%;
  right: 0;
}

.arrow {
  height: 18px;
  position: absolute;
  top: 47%;
  right: 1%;
  transform: rotate(20deg);
}

.hide {
  display: none;
}

.villager--stats {
  display: flex;
}

.villager--type {
  display: flex;
}

.villager--personality {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-right: 10px;
}

.villager--species {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.villager--personality > h3, .villager--species > h3 {
  color: rgb(223, 217, 203);
  font-size: 16px;
  font-weight: lighter;
  border-bottom: 1px solid rgb(223, 217, 203);
  padding: 0 5px 0 5px;
  margin: 8px 0 0 0;
}

.villager--personality > p, .villager--species > p {
  margin: 0;
  font-weight: bolder;
  font-size: 24px;
}

.villager--birthday {
  display: flex;
  justify-content: center;
  align-items: start;
  margin: auto;
  width: 60%;
  margin: 0;
}

.villager--birthday > img {
  height: 20px;
  padding-right: 10px;
}

.villager--birthday > p {
  margin: 0;
  padding-right: 5px;
}

.star-sign {
  height: 24px;
}

.bottom-stats {
  display: flex;
  justify-content: space-around;
  width: 100%;
  margin: 0;
  padding-top: 0;
  position: absolute;
  bottom: -75px;
}

.text-bubble {
  height: 80px;
  width: 150px;
  transform: rotate(-5deg);
  filter: drop-shadow(5px 3px 5px
  rgba(0, 0, 0, 0.1));
}

.villager--quote-bubble {
  position: relative;
}

.villager--quote-bubble > p {
  left: 0;
  position: absolute;
  text-align: center;
  top: 20px;
  width: 100%;
  transform: rotate(-5deg);
}

.villager--hobby {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.villager--hobby > h4 {
  color: rgb(223, 217, 203);
  font-size: 16px;
  font-weight: lighter;
  border-bottom: 1px solid rgb(223, 217, 203);
  padding: 0 10px 0 10px;
  margin: 18px 10px 0 0;
}

.villager--hobby > p {
  margin: 0;
  font-weight: bolder;
  margin: 0 10px 0 0;
}

